--- a/about.html
+++ b/about.html
@@ -70,8 +70,8 @@
 				<nav>
 					<ul><b>
 					<li><a href ="index.html">HOME<a/></li>
-					<li><a href ="About.html">BLOG<a/></li>
-					<li><a href ="Video.html">VIDEO<a/></li>
+					<li><a href ="about.html">BLOG<a/></li>
+					<li><a href ="video.html">VIDEO<a/></li>
 					<li><a href ="https://www.instagram.com/suuuttaaa">MEDIA SOSIAL<a/></li>
 					</b></ul>
 				</nav>
