--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 				<nav>
 					<ul><b>
 					<li><a href ="index.html">HOME<a/></li>
-					<li><a href ="About.html">ABOUT<a/></li>
-					<li><a href ="Video.html">VIDEO<a/></li>
+					<li><a href ="about.html">ABOUT<a/></li>
+					<li><a href ="video.html">VIDEO<a/></li>
 					<li><a href ="https://www.instagram.com/suuuttaaa">MEDIA SOSIAL<a/></li>
 					</b></ul>
 				</nav>
